# ugc

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.elk.yml  setup.cfg
app/: Dockerfile  main.py  requirements.txt  wait-services.sh
db_benchmark/: .env.example  Dockerfile  Makefile  README.MD  docker-compose-clickhouse-cluster.yml  docker-compose-clickhouse.yml  docker-compose-vertica.yml  docker-compose.yml  pyproject.toml  requirements.txt
db_benchmark/src/: benchmark.py  data_generator.py  readwrite.py
db_benchmark/src/clickhouse/: engine.py  readwrite.py
db_benchmark/src/clickhouse/settings/node1/: config.xml  inid-db.sh  init.ddl
db_benchmark/src/clickhouse/settings/node1/init/: inid-db.sh
db_benchmark/src/clickhouse/settings/node2/: config.xml
db_benchmark/src/clickhouse/settings/node3/: config.xml  inid-db.sh  init.ddl
db_benchmark/src/clickhouse/settings/node3/init/: inid-db.sh
db_benchmark/src/clickhouse/settings/node4/: config.xml
db_benchmark/src/clickhouse/settings/node4/init/: inid-db.sh
db_benchmark/src/clickhouse/settings/singlenode/: inid-db.sh
db_benchmark/src/data/: sample.csv
db_benchmark/src/schemas/: results.py
db_benchmark/src/settings/: config.py  template.py
db_benchmark/src/utils/: backoff.py  timers.py
db_benchmark/src/vertica/: engine.py
elk/: logstash.conf
etl/: Dockerfile  consumers.py  etl.py  loaders.py  models.py  requirements.txt  settings.py  transformers.py  utils.py
nginx/: nginx.conf
uml/: asis.plantuml  tobe.plantuml  ugc_detailed.plantuml
(+22 files in other folders)
